--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -11,7 +11,8 @@
 name: Build OpenWrt
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
+  
   repository_dispatch:
   release:
     types: published
